--- a/package.json
+++ b/package.json
@@ -9,17 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.5",
+    "formik": "^2.4.6",
+    "mobx": "^6.13.7",
+    "mobx-react": "^9.2.0",
+    "mobx-state-tree": "^7.0.2",
+    "next": "15.3.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-hook-form": "^7.56.2",
+    "react-phone-input-2": "^2.15.1",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/zxcvbn": "^4.4.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5",
+    "zod": "^3.24.4"
   }
 }
