--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.9.0",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
     "mobx-state-tree": "^7.0.2",
@@ -26,6 +28,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bootstrap": "^5.2.10",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
