--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "migration:create": "npx typeorm-ts-node-commonjs migration:create",
     "migration:drop": "npx typeorm-ts-node-commonjs schema:drop -d data-source.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "seed": "ts-node ./src/seeds/seedDatabase.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
