--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "mobx": "^6.13.7",
@@ -24,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-phone-input-2": "^2.15.1",
+    "react-toastify": "^11.0.5",
     "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
