--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
+    "react-loading-skeleton": "^3.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-toastify": "^11.0.5",
     "zod-formik-adapter": "^1.3.0"
